# codex-python-basic

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: __init__.py  app.py  calculus.py  matrix_utils.py  server.py
tests/: conftest.py  test_app.py  test_calculus.py  test_matrix_utils.py
